# nikescraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  response.html
src/: main.py
src/spider/: cli.py  config.py  debug.py  helper.py  logger.py  nike.py
temp/: response.html
